# libDaisy

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  Makefile  NE_FEEDBACK.md  README.md  UPE.txt  __a1___getting-_started-_g_p_i_o_8md.html  __a2___getting-_started-_serial-_printing_8md.html  __a3___getting-_started-_audio_8md.html  __a4___getting-_started-_a_d_cs_8md.html  __a6___getting-_started-_external-_s_d_r_a_m_8md.html  __a7___getting-_started-_daisy-_bootloader_8md.html  __a8___getting-_started-_s_p_i_8md.html  __a8___getting___started-_s_p_i_8md.html  __b1___development-_unit-_testing_8md.html  _abstract_menu_8h.html  _abstract_menu_8h.js  _abstract_menu_8h_source.html  _button_monitor_8h.html  _button_monitor_8h_source.html  _cpu_load_meter_8h.html  _cpu_load_meter_8h.js  _cpu_load_meter_8h_source.html  _f_i_f_o_8h.html  _f_i_f_o_8h.js  _f_i_f_o_8h_source.html  _file_reader_8h.html  _file_reader_8h.js  _file_reader_8h_source.html  _file_table_8h.html  _file_table_8h.js  _file_table_8h_source.html  (+1434 more)
Drivers/: CMakeLists.txt  notes.md
Drivers/STM32H7xx_HAL_Driver/Inc/: stm32h7xx_hal_hrtim.h  stm32h7xx_hal_tim.h  stm32h7xx_ll_usb.h
Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal.c  stm32h7xx_hal_sai.c  stm32h7xx_ll_sdmmc.c  stm32h7xx_ll_spi.c  stm32h7xx_ll_usb.c
Middlewares/ST/: CMakeLists.txt  Notes.txt
examples/: CMakeLists.txt  README.md
examples/ADCMulti/: ADCMulti.cpp  CMakeLists.txt  Makefile
examples/ADCMux/: ADCMux.cpp  CMakeLists.txt  Makefile
examples/AudioOutput/: AudioOutput.cpp  CMakeLists.txt  Makefile
examples/AudioPassthru/: AudioPassthru.cpp  CMakeLists.txt  Makefile
examples/BootloaderBlink/: CMakeLists.txt  Makefile  main.cpp
examples/CopyingWavs/: CMakeLists.txt  CopyingWavs.cpp  Makefile  wav_copy_class.cpp  wav_copy_class.h
examples/CopyingWavsSimple/: CopyingWavsSimple.cpp  Makefile
examples/DAC_Polling_Output/: CMakeLists.txt  DAC_Polling_Output.cpp  Makefile
examples/Encoder/: CMakeLists.txt  Encoder.cpp  Makefile
examples/ExternalCodec/: CMakeLists.txt  ExternalCodec.cpp  Makefile
examples/Field/BasicField/: BasicField-Debug.vgdbsettings  BasicField-Release.vgdbsettings  BasicField.cpp  BasicField.sln  BasicField.vcxproj  BasicField.vcxproj.filters
examples/FileTable/: CMakeLists.txt  Makefile  main.cpp
examples/GPIO_Input/: CMakeLists.txt  GPIO_Input.cpp  Makefile
examples/GPIO_Output/: CMakeLists.txt  GPIO_Output.cpp  Makefile
examples/GateInput/: CMakeLists.txt  GateInput.cpp  Makefile
examples/MIDI_UART_Input/: CMakeLists.txt  MIDI_UART_Input.cpp  Makefile
examples/MIDI_USBH_Input/: CMakeLists.txt  MIDI_USBH_Input.cpp  Makefile
examples/Mpr121/: CMakeLists.txt  Makefile  main.cpp
examples/OLED_SPI/: CMakeLists.txt  Makefile  OledSPI.cpp
examples/OLED_SSD130x4WireSPI/: CMakeLists.txt  Makefile  OLED_SSD130x4WireSPI.cpp
examples/OLED_SoftSPI/: CMakeLists.txt  Makefile  OledSoftSPI.cpp
examples/PWM/AddressableLED/: Makefile  addressable-led.cpp
examples/PWM/Basic-PWM/: Makefile  basic-pwm.cpp
examples/PWM/DMA-PWM/: Makefile  dma-pwm.cpp
examples/PWM_Output/: CMakeLists.txt  Makefile  PWM_Output.cpp
examples/QSPI_EraseTiming/: CMakeLists.txt  Makefile  main.cpp
examples/QSPI_ReadAndWrite/: CMakeLists.txt  Makefile  main.cpp
examples/SDMMC_HelloWorld/: CMakeLists.txt  Makefile  SDMMC_HelloWorld.cpp
examples/SDMMC_WavPlayer/: Makefile  SDMMC_WavPlayer.cpp  Stuff.h
examples/SPI/: CMakeLists.txt  README.md
examples/SPI/SpiBlockingTransmit/: CMakeLists.txt  Makefile  README.md  SpiBlockingTransmit.cpp
examples/SPI/SpiDmaTransmit/: CMakeLists.txt  Makefile  README.md  SpiDmaTransmit.cpp
examples/SR_4021/: CMakeLists.txt  Makefile  SR_4021.cpp
examples/SerialPrint/: CMakeLists.txt  Makefile  SerialPrint.cpp
examples/SerialRead/: CMakeLists.txt  Makefile  SerialRead.cpp
examples/Switch/: CMakeLists.txt  Makefile  Switch.cpp
examples/Switch3/: CMakeLists.txt  Makefile  Switch3.cpp
examples/TIM_SingleCallback/: CMakeLists.txt  Makefile  TIM_SingleCallback.cpp
examples/Trill/: Makefile  Trill.cpp
examples/Trill-Craft/: Makefile  Trill-Craft.cpp
examples/WavParser/: CMakeLists.txt  Makefile  main.cpp
examples/WavPlayer/: CMakeLists.txt  FileReader.h  FileTable.h  Makefile  Player.h  WavParser.h  main.cpp
examples/WavWriter/: CMakeLists.txt  Makefile  WavWriter.cpp
examples/WavWriter_Realtime/: CMakeLists.txt  Makefile  main.cpp
examples/bypass/: Makefile  bypass.c  makefile
examples/ledplay/: Makefile  main.c  makefile
examples/noise/: Makefile  noise.c
examples/oscillator/: Makefile  README.md  ex_oscillator.c
examples/patch/oscillator/: ex_oscillator.c
examples/patch/reverbsc/: Makefile  ex_reverbsc.c
examples/pod_encoder/: Makefile  README.md  main.c
examples/simplebypass/: makefile  simple_bypass.c
examples/simpleverb/: makefile  simple_verb.c
examples/svf/: Makefile  svf.c
examples/template/: Makefile  main.c  makefile
examples/uart/: CMakeLists.txt
examples/uart/Blocking_Receive/: Blocking_Receive.cpp  CMakeLists.txt  Makefile
examples/uart/Blocking_Transmit/: Blocking_Transmit.cpp  CMakeLists.txt  Makefile
examples/uart/Blocking_Transmit_Dma_Receive/: Blocking_Transmit_Dma_Receive.cpp  CMakeLists.txt  Makefile
examples/uart/Blocking_Transmit_Fifo_Receive/: Blocking_Transmit_Fifo_Receive.cpp  CMakeLists.txt  Makefile
examples/uart/Dma_Fifo_Receive/: CMakeLists.txt  Dma_Fifo_Receive.cpp  Makefile
examples/uart/Dma_Receive/: CMakeLists.txt  Makefile  (+1 more)
examples/verb/: Makefile  makefile  verb.c
examples/whitenoise/: Makefile  ex_whitenoise.c
tests/: AbstractMenu_gtest.cpp  CMakeLists.txt  CpuLoadMeter_gtest.cpp  FIFO_gtest.cpp  FatFsMock.cpp  FatFsMock.h  FixedCapStr_gtest.cpp  MAX11300_gtest.cpp  Makefile  MappedValue_gtest.cpp  Midi_gtest.cpp  PersistentStorage_gtest.cpp  Pin_gtest.cpp  Rectangle_gtest.cpp  Stack_gtest.cpp  TestIsolator.h  VoctCalibration_gtest.cpp  WavWriter_gtest.cpp  gtest-all.cpp  gtest_main.cpp  libDaisyCombined.cpp
(+1318 files in other folders)
