cmake_policy(SET CMP0048 NEW)
project (libdaisy VERSION 1.0.0)
cmake_minimum_required(VERSION 3.20)

set(TARGET daisy)


set(MODULE_DIR "${CMAKE_CURRENT_LIST_DIR}/src")

add_library(${TARGET} STATIC
    ${MODULE_DIR}/sys/dma.c
    ${MODULE_DIR}/hid/audio.cpp
    ${MODULE_DIR}/sys/fatfs.cpp
    ${MODULE_DIR}/per/gpio.cpp
    ${MODULE_DIR}/per/rng.cpp
    ${MODULE_DIR}/per/sai.cpp
    ${MODULE_DIR}/per/sdmmc.cpp
    ${MODULE_DIR}/util/bsp_sd_diskio.c
    ${MODULE_DIR}/util/hal_map.c
    ${MODULE_DIR}/util/oled_fonts.c
    ${MODULE_DIR}/util/sd_diskio.c
    ${MODULE_DIR}/util/usbh_diskio.c
    ${MODULE_DIR}/util/unique_id.c
    ${MODULE_DIR}/sys/system_stm32h7xx.c
    ${MODULE_DIR}/usbd/usbd_cdc_if.c
    ${MODULE_DIR}/usbd/usbd_desc.c
    ${MODULE_DIR}/usbd/usbd_conf.c
    ${MODULE_DIR}/usbh/usbh_conf.c
    ${MODULE_DIR}/daisy_seed.cpp
    ${MODULE_DIR}/daisy_pod.cpp
    ${MODULE_DIR}/daisy_patch.cpp
    ${MODULE_DIR}/daisy_petal.cpp
    ${MODULE_DIR}/daisy_field.cpp
    ${MODULE_DIR}/daisy_versio.cpp
    ${MODULE_DIR}/daisy_patch_sm.cpp
    ${MODULE_DIR}/sys/system.cpp
    ${MODULE_DIR}/dev/sr_595.cpp
    ${MODULE_DIR}/dev/codec_ak4556.cpp
    ${MODULE_DIR}/dev/codec_pcm3060.cpp
    ${MODULE_DIR}/dev/codec_wm8731.cpp
    ${MODULE_DIR}/dev/lcd_hd44780.cpp
    ${MODULE_DIR}/hid/ctrl.cpp
    ${MODULE_DIR}/hid/encoder.cpp
    ${MODULE_DIR}/hid/gatein.cpp
    ${MODULE_DIR}/hid/led.cpp
    ${MODULE_DIR}/hid/parameter.cpp
    ${MODULE_DIR}/hid/rgb_led.cpp
    ${MODULE_DIR}/hid/switch.cpp
    ${MODULE_DIR}/hid/usb.cpp
    ${MODULE_DIR}/hid/usb_host.cpp
    ${MODULE_DIR}/hid/usb_midi.cpp
    ${MODULE_DIR}/hid/wavplayer.cpp
    ${MODULE_DIR}/hid/logger.cpp
    ${MODULE_DIR}/per/adc.cpp
    ${MODULE_DIR}/per/dac.cpp
    ${MODULE_DIR}/per/i2c.cpp
    ${MODULE_DIR}/per/qspi.cpp
    ${MODULE_DIR}/dev/sdram.cpp
    ${MODULE_DIR}/per/spi.cpp
    ${MODULE_DIR}/per/spiMultislave.cpp
    ${MODULE_DIR}/per/tim.cpp
    ${MODULE_DIR}/per/uart.cpp
    ${MODULE_DIR}/ui/AbstractMenu.cpp
    ${MODULE_DIR}/ui/FullScreenItemMenu.cpp
    ${MODULE_DIR}/ui/UI.cpp
    ${MODULE_DIR}/util/color.cpp
    ${MODULE_DIR}/util/WaveTableLoader.cpp

    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_adc.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_adc_ex.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_cec.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_comp.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_cortex.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_crc.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_crc_ex.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_cryp.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_cryp_ex.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dac.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dac_ex.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dcmi.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dfsdm.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dma.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dma2d.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dma_ex.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dsi.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_eth.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_eth_ex.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_exti.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_fdcan.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_flash.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_flash_ex.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_gpio.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_hash.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_hash_ex.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_hcd.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_hrtim.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_hsem.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_i2c.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_i2c_ex.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_i2s.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_i2s_ex.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_irda.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_iwdg.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_jpeg.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_lptim.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_ltdc.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_ltdc_ex.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_mdios.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_mdma.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_mmc.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_mmc_ex.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_msp_template.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_nand.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_nor.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_opamp.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_opamp_ex.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_pcd.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_pcd_ex.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_pwr.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_pwr_ex.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_qspi.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_ramecc.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_rcc.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_rcc_ex.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_rng.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_rtc.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_rtc_ex.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sai.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sai_ex.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sd.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sdram.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sd_ex.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_smartcard.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_smartcard_ex.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_smbus.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_spdifrx.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_spi.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_spi_ex.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sram.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_swpmi.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_tim.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_timebase_rtc_alarm_template.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_timebase_rtc_wakeup_template.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_timebase_tim_template.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_tim_ex.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_uart.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_uart_ex.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_usart.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_usart_ex.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_wwdg.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_adc.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_bdma.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_comp.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_crc.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_dac.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_delayblock.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_dma.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_dma2d.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_exti.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_fmc.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_gpio.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_hrtim.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_i2c.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_lptim.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_lpuart.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_mdma.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_opamp.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_pwr.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_rcc.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_rng.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_rtc.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_sdmmc.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_spi.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_swpmi.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_tim.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_usart.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_usb.c
    Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_utils.c

    Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/usbd_cdc.c
    Middlewares/ST/STM32_USB_Device_Library/Core/Src/usbd_core.c
    Middlewares/ST/STM32_USB_Device_Library/Core/Src/usbd_ctlreq.c
    Middlewares/ST/STM32_USB_Device_Library/Core/Src/usbd_ioreq.c
    Middlewares/ST/STM32_USB_Host_Library/Core/Src/usbh_core.c
    Middlewares/ST/STM32_USB_Host_Library/Core/Src/usbh_ctlreq.c
    Middlewares/ST/STM32_USB_Host_Library/Core/Src/usbh_ioreq.c
    Middlewares/ST/STM32_USB_Host_Library/Core/Src/usbh_pipes.c
    Middlewares/ST/STM32_USB_Host_Library/Class/MSC/Src/usbh_msc_bot.c
    Middlewares/ST/STM32_USB_Host_Library/Class/MSC/Src/usbh_msc_scsi.c
    Middlewares/ST/STM32_USB_Host_Library/Class/MSC/Src/usbh_msc.c
    Middlewares/Third_Party/FatFs/src/diskio.c
    Middlewares/Third_Party/FatFs/src/ff.c
    Middlewares/Third_Party/FatFs/src/ff_gen_drv.c
    core/startup_stm32h750xx.c
    )

target_include_directories(${TARGET} PUBLIC
    ${MODULE_DIR}
    Drivers/CMSIS/Include
    Drivers/CMSIS/Device/ST/STM32H7xx/Include
    Drivers/STM32H7xx_HAL_Driver/Inc
    Drivers/STM32H7xx_HAL_Driver/Inc/Legacy
    Middlewares/ST/STM32_USB_Device_Library/Core/Inc
    Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc
    Middlewares/ST/STM32_USB_Host_Library/Core/Inc
    Middlewares/ST/STM32_USB_Host_Library/Class/MSC/Inc
    Middlewares/Third_Party/FatFs/src
    src
    src/sys
    src/usbd
    src/usbh
    )

set_target_properties(${TARGET} PROPERTIES
  CXX_STANDARD 14
  CXX_STANDARD_REQUIRED
  C_STANDARD 11
  C_STANDARD_REQUIRED
  )
