cmake_path(SET LOCAL_CMAKE_PATH "../cmake")
cmake_path(ABSOLUTE_PATH LOCAL_CMAKE_PATH)

list(APPEND CMAKE_MODULE_PATH ${LOCAL_CMAKE_PATH})

add_subdirectory(ADCMulti)
add_subdirectory(ADCMux)
add_subdirectory(AudioOutput)
add_subdirectory(AudioPassthru)
add_subdirectory(BootloaderBlink)
add_subdirectory(CopyingWavs)
add_subdirectory(DAC_Polling_Output)
add_subdirectory(Encoder)
add_subdirectory(ExternalCodec)
add_subdirectory(GateInput)
add_subdirectory(GPIO_Input)
add_subdirectory(GPIO_Output)
add_subdirectory(MIDI_UART_Input)
add_subdirectory(MIDI_USBH_Input)
add_subdirectory(OLED_SSD130x4WireSPI)
add_subdirectory(SDMMC_HelloWorld)
add_subdirectory(SerialPrint)
add_subdirectory(SerialRead)
add_subdirectory(SR_4021)
add_subdirectory(Switch)
add_subdirectory(Switch3)
add_subdirectory(TIM_SingleCallback)

# Folders
add_subdirectory(uart)
add_subdirectory(SPI)
