add_subdirectory(Blocking_Receive)
add_subdirectory(Blocking_Transmit)
add_subdirectory(Blocking_Transmit_Dma_Receive)
add_subdirectory(Blocking_Transmit_Fifo_Receive)
add_subdirectory(Dma_Fifo_Receive)
add_subdirectory(Dma_Receive)
add_subdirectory(Dma_Transmit)
add_subdirectory(Dma_Transmit_Blocking_Receive)
add_subdirectory(Dma_Transmit_Dma_Receive)
